@@ -2,7 +2,7 @@
  OmegaT 2.1.4 update 2
 ----------------------------------------------------------------------
   2 Enhancements
-  0 Bugfix
+  1 Bugfix
 ----------------------------------------------------------------------
 2.1.4 update 2 vs. 2.1.4 update 1
 
@@ -13,6 +13,11 @@
 
   - Insert exact matches from TMXs in the auto folder
   http://sourceforge.net/support/tracker.php?aid=2131989
+
+  Bug fixes:
+
+  - Insert Source Tags miss tags when source text contains <
+  http://sourceforge.net/support/tracker.php?aid=2987164
 
 ----------------------------------------------------------------------
  OmegaT 2.1.4 update 1
